# GhostCam

./: .gitignore  GhostCam.ps1  GhostCam.sh  LICENSE  README.md  ecosystem.config.js  install.bat  pyproject.toml  requirements.txt
scripts/: verify_headless.py
src/ghostcam/: __init__.py  compositing.py  main.py  segmentation.py
tests/: test_segmentation.py
